# API_implementer_modele_scoring

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENCE  README.md  development.md  justfile  main.py  pyproject.toml  run.py  styles.css
.github/workflow/: deploy.yml  hf_sync.yml  main.yaml
.github/workflows/: hf_sync.yml  qa.yml  test_app.yml
app/: Best_LGBM_Model.pkl  api.py  encoders.pkl  main.py  model.py
app/api/: pages.py  predict.py
model/: Best_LGBM_Model.pkl  customers_data.csv  encoders.pkl  model_features.pkl
models/: customers_data.csv  encoders.pkl
pages/: dashboard.py  dashboard_v2.py  functions.py
tests/: conftest.py  test_main.py  test_pages.py  test_predict.py
