[project]
name = "credit-scoring"
version = "0.1.0"
description = "API pour implementer un modele de scoring. Projet 7 Openclassrooms - Formation Datascientist"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Guillaume LAFON", email = "guillaumelafon13@gmail.com" } ]
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "marimo>=0.14.16",
    "uvicorn>=0.35.0",
    "cffi==1.17.1",
    "cloudpickle==3.1.1",
    "defusedxml==0.7.1",
    "imbalanced-learn==0.13.0",
    "lightgbm==4.6.0",
    "matplotlib==3.10.0",
    "numpy==2.1.3",
    "pandas==2.3.1",
    "psutil==7.0.0",
    "pyarrow==20.0.0",
    "pytest==8.4.1",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "requests>=2.32.4",
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.1",
    "mypy>=1.17.1",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.13.0",
    "pytest>=8.4.1",
]
